<resources>
    <string name="app_name">SmartStorageUnit</string>
    <string name="txt_Login">Login:</string>
    <string name="txt_Username">Username:</string>
    <string name="txt_Password">Password:</string>
    <string name="txt_showPaswd">Show password</string>
    <string name="btn_Login">LOGIN</string>
    <string name="wrongUP">Wrong username/password</string>
    <string name="loading">Loading</string>
    <string name="wait">Please wait</string>
    <string name="login_as">LOGIN AS</string>
    <string name="otherUser">Other user</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="settings">Settings</string>
    <string name="newItem">Store new item</string>
    <string name="storage">Storage</string>
    <string name="correctQuantity">Correct quantity</string>
    <string name="nav_header_title">Smart Storage Unit</string>
    <string name="nav_header_subtitle">smartstorageunit.ddns.net</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menuOverview">Overview</string>
    <string name="articleNumber">Article number</string>
    <string name="value">Value</string>
    <string name="unit">Unit</string>
    <string name="saveItem">Save item</string>
    <string name="quantity">Quantity</string>
    <string name="component">Component</string>
    <string name="refName">Name</string>
    <string name="storeItem">Store item</string>
    <string name="withdrawItem">Withdraw item</string>
    <string name="store">Store</string>
    <string name="divider1">Divider 1</string>
    <string name="divider2">Divider 2</string>
    <string name="divider3">Divider 3</string>
    <string name="position">Position</string>
    <string name="logout">Logout</string>
    <string name="deleteStoragePos">Delete storage slot</string>
    <string name="storageid">Storage id</string>
    <string name="inventoryReport">Report</string>
</resources>
